<resources>
    <string name="app_name">Fond</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Don\'t have an account? Sign up here.</string>
    <string name="fond_logo">Fond Logo</string>
    <string name="create_usrname">Create a username</string>
    <string name="choose_password">Choose a password</string>
    <string name="recipe_image">recipe image</string>
    <string name="user_profile">User\'s profile photo</string>
    <string name="user_post_image">User post\'s image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_a_caption">Enter a caption...</string>
    <string name="submit">Submit</string>
    <string name="captured_image">Captured image</string>
    <string name="post">Post</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="fab_content_desc" />
</resources>