<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_user_feed"
        android:icon="@drawable/drawable_home"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/drawable_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_recipe"
        android:icon="@drawable/drawable_fork_and_knife2"
        android:title="@string/saved_recipes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/drawable_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>